fix scrolling on mobile

--- a/web-app/public/style.css
+++ b/web-app/public/style.css
@@ -16,7 +16,7 @@
 }
 
 html {
-  min-height: 100%;
+  /* min-height: 100%; */
 }
 
 body {
@@ -50,7 +50,7 @@ form div {
 }
 
 #app {
-  height: 100%;
+  /* height: 100%; */
 }
 
 .no-margin {
@@ -102,7 +102,7 @@ form div {
   display: flex;
   width: 100%;
   margin: 0;
-  height: calc(100% - 40px);
+  /* height: calc(100% - 40px); */
   position: relative;
 }
 
@@ -110,7 +110,7 @@ form div {
   padding: 30px 3%;
   flex: 4;
   width: calc(100% - 200px);
-  height: 100%;
+  /* height: 100%; */
   margin: 0 !important;
   position: absolute;
   top: 40px;
@@ -148,6 +148,9 @@ form div {
 #nav-sidebar-mobile {
   top: 40px;
   height: calc(100% - 40px) !important;
+  position: fixed !important;
+  z-index: 10;
+  margin: 0 !important;
 }
 
 .navbar-side-item {
@@ -163,11 +166,6 @@ form div {
 
 #add-form {
   width: 350px;
-}
-
-#mobile-pusher-container {
-  height: 100%;
-  overflow-y: scroll;
 }
 
 /*---------------------------------*/
